<package format="3">
  <name>NXP_AIM_INDIA_2025</name>
  <version>0.1.0</version>
  <description>Simulation & Navigation Package for MR-Buggy3 Challenge</description>

  <maintainer email="ranveer4us@gmail.com">Ranveer Raj</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
